[workspace]
members = [
  "api_server",
  "core",
  "content_export",
  "tests",
  "worker",
]

# TODO: upgrade `postgres` and `openssl`
# https://github.com/sfackler/rust-openssl/pull/1001
# `openssl` 0.9 is no longer supported, but it's required by the version of `postgres` we need
[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
