[package]
name = "world_api_server"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"
publish = false

[features]
# Enables IAM instance auth and other functionality only needed on EC2 in VPC, etc.
production = ["world_core/production"]

[dependencies]
diesel = { features = ["postgres", "r2d2", "chrono", "serde_json"], version = "1.3.2" }
diesel_migrations = "^1.4"
dotenv = "^0.14"
log = "^0.4"
pretty_env_logger = "^0.3"
tokio = { version = "^0.2", features = ["blocking", "macros", "rt-threaded"] }
warp = "^0.2"
world_core = { path = "../core" }
