[package]
name = "timeline-server"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2.0"
argon2rs = "^0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { features = ["postgres", "r2d2", "chrono"], version = "1.3.2" }
dotenv = "^0.14"
env_logger = "^0.7"
log = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
