[package]
name = "westrikworld-server"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"

[dependencies]
argon2rs = "^0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { features = ["postgres", "r2d2", "chrono"], version = "1.3.2" }
diesel_migrations = "^1.4"
dotenv = "^0.14"
env_logger = "^0.7"
lazy_static="^1.4"
log = "^0.4"
rand = "^0.7"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
