[package]
name = "world_worker"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"
publish = false

[features]
# Enables IAM instance auth and other functionality only needed on EC2 in VPC, etc.
production = ["world_core/production"]

[dependencies]
async-trait = "^0.1"
bytes = "^0.5"
diesel = { features = ["postgres", "r2d2", "chrono", "serde_json"], version = "1.3.2" }
diesel_migrations = "^1.4"
dotenv = "^0.14"
lazy_static="^1.4"
liquid = "^0.21"
log = "^0.4"
pretty_env_logger = "^0.3"
# TODO: move all AWS interaction to single crate
rusoto_core = "^0.45"
rusoto_lambda = "^0.45"
rusoto_s3 = "^0.45"
rusoto_sts = "^0.45"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = { version = "^0.2", features = ["blocking", "macros", "rt-threaded"] }
warp = "^0.2"
world_core = { path = "../core" }
fallible-iterator="0.1.6" # higher versions don't work with postgres
postgres = { version = "0.15.2", features = ["with-serde_json"] } # higher versions don't work with notifications
