[package]
name = "world_worker"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"
publish = false

[features]
default = []
# Enables functionality only needed on EC2 in VPC:
# - IAM instance auth
# - verify SSL certificates (e.g. for RDS)
production = ["world_core/production", "postgres/with-openssl", "openssl"]

[dependencies]
# TODO: move all AWS interaction to single crate
async-trait = "^0.1"
bytes = "^0.5"
diesel = { features = ["postgres", "r2d2", "chrono", "serde_json"], version = "1.3.2" }
diesel_migrations = "^1.4"
dotenv = "^0.14"
fallible-iterator = "0.1.6" # higher versions don't work with postgres
lazy_static="^1.4"
liquid = "^0.21"
log = "^0.4"
pretty_env_logger = "^0.3"
rusoto_core = "^0.45"
rusoto_lambda = "^0.45"
rusoto_s3 = "^0.45"
rusoto_sts = "^0.45"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = { version = "^0.2", features = ["blocking", "macros", "rt-threaded"] }
warp = "^0.2"
world_core = { path = "../core" }

# TODO: replace `postgres`, `openssl`, & `fallible-iterator` with something less broken
[dependencies.postgres]
version = "0.15.2" # higher versions don't work with PG notifications
features = ["with-serde_json"]

[dependencies.openssl]
version = "0.9.24" # need the version used by postgres 0.15.2
optional = true
