[package]
name = "westrikworld_core"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"
publish = false

[dependencies]
argon2rs = "^0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { features = ["postgres", "r2d2", "chrono", "serde_json"], version = "1.3.2" }
diesel_migrations = "^1.4"
dotenv = "^0.14"
lazy_static="^1.4"
log = "^0.4"
pretty_env_logger = "^0.3"
pulldown-cmark = "^0.7"
rand = "^0.7"
regex = "^1.3"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = { version = "^0.2", features = ["macros", "rt-threaded"] }
warp = "^0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "markdown_to_json"
harness = false
