[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { features = ["postgres", "r2d2", "chrono", "serde_json"], version = "1.4.5" }
diesel_migrations = "^1.4"
dotenv = "^0.14"
lazy_static="^1.4"
rand = "^0.7"
regex = "^1.3"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
warp = "^0.2"
westrikworld_core = { path = "../core" }
