[package]
name = "run_server"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"
publish = false

[dependencies]
diesel = { features = ["postgres", "r2d2", "chrono", "serde_json"], version = "1.3.2" }
diesel_migrations = "^1.4"
dotenv = "^0.15"
log = "^0.4"
pretty_env_logger = "^0.3"
tokio = { version = "^0.2", features = ["macros", "rt-threaded"] }
warp = "^0.2"
westrikworld_core = { path = "../core" }
