[tool.poetry]
name = "create_db_user_with_iam_role"
version = "0.1.0"
description = "Connect to RDS(+SM) to add a user with the rds_iam role"
authors = ["Matt Westrik <m@ttwestrik.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pg8000 = "^1.13"
boto = "^2.49"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
