[tool.poetry]
name = "renew_certificate"
version = "0.1.0"
description = "Connect to Let's Encrypt, Route 53, and Secrets Manager to update a TLS certificate"
authors = ["Matt Westrik <m@ttwestrik.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto = "^2.49"
certbot = "^1.3.0"
certbot-dns-route53 = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
