[tool.poetry]
name = "rotate_db_password"
version = "0.1.0"
description = "Connect to RDS and Secrets Manager to rotate passwords"
authors = ["Matt Westrik <m@ttwestrik.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pg8000 = "^1.13"
boto = "^2.49"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
